# ent/migrate/schema.go
@@ -1,0 +1,46 @@
+// Code generated by ent, DO NOT EDIT.
+
+package migrate
+
+import (
+	"entgo.io/ent/dialect/sql/schema"
+	"entgo.io/ent/schema/field"
+)
+
+var (
+	// UrLsColumns holds the columns for the "ur_ls" table.
+	UrLsColumns = []*schema.Column{
+		{Name: "id", Type: field.TypeInt, Increment: true},
+		{Name: "short_code", Type: field.TypeString, Unique: true, Size: 20},
+		{Name: "original_url", Type: field.TypeString, Size: 2048},
+		{Name: "click_count", Type: field.TypeInt64, Default: 0},
+		{Name: "expires_at", Type: field.TypeTime, Nullable: true},
+		{Name: "created_at", Type: field.TypeTime},
+		{Name: "updated_at", Type: field.TypeTime},
+	}
+	// UrLsTable holds the schema information for the "ur_ls" table.
+	UrLsTable = &schema.Table{
+		Name:       "ur_ls",
+		Columns:    UrLsColumns,
+		PrimaryKey: []*schema.Column{UrLsColumns[0]},
+		Indexes: []*schema.Index{
+			{
+				Name:    "url_short_code",
+				Unique:  true,
+				Columns: []*schema.Column{UrLsColumns[1]},
+			},
+			{
+				Name:    "url_created_at",
+				Unique:  false,
+				Columns: []*schema.Column{UrLsColumns[5]},
+			},
+		},
+	}
+	// Tables holds all the tables in the schema.
+	Tables = []*schema.Table{
+		UrLsTable,
+	}
+)
+
+func init() {
+}
